--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 {%- include snippets/get-article-title.html article=page -%}
 <title>{%- if __return -%}{{ __return }} - {{ site.title }}{%- else -%}{{ site.title }}{%- endif -%}</title>
 
-<meta name="description" content="{%- if page.excerpt -%}{{ page.excerpt | strip_html | strip_newlines | strip | truncate: 160 }}{%- else -%}{{ site.description }}{%- endif -%}">
+<meta name="description" content="聚禾文化,聚禾招商,曹公子,辉哥,起盘策划,商业模式,全案梳理,招商陪跑,落地招商,团队内训,商学院搭建,商学院赋能,线上动销,美业品牌,招商销讲">
 <link rel="canonical" href="{%- include snippets/page-url.html -%}">
 
 {%- assign _paths_rss = site.paths.rss | default: site.data.variables.default.paths.rss -%}
